Correct dropdown spacing in Menumaker

--- a/themes/colors/css/shinytomato.css
+++ b/themes/colors/css/shinytomato.css
@@ -1850,6 +1850,7 @@ padding: 0 10px;
 	display:none;
 	position:absolute;
 	left:0px;
+	top: 1.0em;
 	background-color:#EEE;
 	border:thin solid #AAA;
 	z-index:999;
